fix: enhance service page styles for improved readability and structure

--- a/app/style/navbar.module.css
+++ b/app/style/navbar.module.css
@@ -16,7 +16,7 @@
 .topHead_span {
   display: inline-block;
   position: absolute;
-  transition: opacity 0.8s ease-in-out, transform 0.8s ease-in-out;
+  transition: opacity 0.6s ease-in-out, transform 0.6s ease-in-out;
   white-space: nowrap;
 }
 
@@ -64,7 +64,7 @@
   display: flex;
   position: absolute;
   right: 1rem;
-  background-color: aliceblue;
+  background-color: rgb(229, 231, 232);
   width: max-content;
   padding: 12px;
   margin-top: 1.5rem;
@@ -123,7 +123,7 @@
 
 .nav_ul{
   position:absolute;
-  top: 65px;
+  top: 60px;
   width: 100%;
   left: 0;
   height: auto;
@@ -150,7 +150,7 @@
     margin-top: 0; 
     transform: translateY(-10px); 
     opacity: 0;
-    transition: transform 0.8s ease-in-out, opacity 0.8s ease-in-out;
+    transition: transform 0.6s ease-in-out, opacity 0.6s ease-in-out;
     margin-top: 10px;
     color: black;
     display: none;
