--- a/app/style/service.module.css
+++ b/app/style/service.module.css
@@ -26,6 +26,7 @@ border-radius: 10px;
     padding: 5rem;
     justify-content: flex-start;
    max-width: 100%;
+   position: relative;
 }
 
 .service_content_img{
@@ -37,4 +38,28 @@ border-radius: 10px;
 .selectedContent.img{
     width: 100%;
     height: 100%;
+}
+.service_details{
+    line-height: 2;
+}
+.selectedContent_name{
+    font-size: 2.8rem;
+}
+
+.selectedContent_heading{
+    font-size: 2rem;
+
+}
+.selectedContent_para{
+    font-size: 1.5rem;
+
+}
+.selectedContent_btn{
+    margin-top: 2rem;
+padding: 12px 24px;
+font-size: 1.4rem;
+border-radius: 6px;
+border: none;
+background-color: rgb(255, 153, 0);
+cursor: pointer;
 }
